--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -58,7 +58,7 @@
             }
         ],
         "eqeqeq": [
-            "error",
+            "warn",
             "always"
         ],
         "no-empty": [
@@ -69,7 +69,7 @@
         ],
         "no-unused-vars": "off",
         "@typescript-eslint/no-unused-vars": [
-            "error",
+            "warn",
             {
                 "vars": "all",
                 "args": "after-used",
